--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                         <td colspan="2">' + (feature.properties['Photos'] !== null ? '<img src="images/Damaged Birdhouse Photos copy/House 5 pxl right.jpg"' + String(feature.properties['Photos']).replace(/[\\\/:]/g, '_').trim() + '">' : '') + '</td>\
                     </tr>\
                     <tr>\
-                        <td colspan="2">' + (feature.properties['Photos 2'] !== null ? '<img src="images/' + String(feature.properties['Photos 2']).replace(/[\\\/:]/g, '_').trim() + '">' : '') + '</td>\
+                        <td colspan="2">' + (feature.properties['Photos 2'] !== null ? '<img src="images/Damaged Birdhouse Photos copy/House 5 inside righttt.jpg"' + String(feature.properties['Photos 2']).replace(/[\\\/:]/g, '_').trim() + '">' : '') + '</td>\
                     </tr>\
                     <tr>\
                         <td colspan="2">' + (feature.properties['Photo Birdhouse 3'] !== null ? '<img src="images/' + String(feature.properties['Photo Birdhouse 3']).replace(/[\\\/:]/g, '_').trim() + '">' : '') + '</td>\
