--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                         <td colspan="2">' + (feature.properties['Photos 2'] !== null ? '<img src="images/Damaged Birdhouse Photos copy/House 5 inside righttt.jpg"' + String(feature.properties['Photos 2']).replace(/[\\\/:]/g, '_').trim() + '">' : '') + '</td>\
                     </tr>\
                     <tr>\
-                        <td colspan="2">' + (feature.properties['Photo Birdhouse 3'] !== null ? '<img src="images/' + String(feature.properties['Photo Birdhouse 3']).replace(/[\\\/:]/g, '_').trim() + '">' : '') + '</td>\
+                        <td colspan="2">' + (feature.properties['Photo Birdhouse 3'] !== null ? '<img src="images/Damaged Birdhouse Photos copy/House Pic 3 right.png"' + String(feature.properties['Photo Birdhouse 3']).replace(/[\\\/:]/g, '_').trim() + '">' : '') + '</td>\
                     </tr>\
                     <tr>\
                         <td colspan="2">' + (feature.properties['Photo Birdhouse 4'] !== null ? '<img src="images/' + String(feature.properties['Photo Birdhouse 4']).replace(/[\\\/:]/g, '_').trim() + '">' : '') + '</td>\
