--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                         <td colspan="2">' + (feature.properties['Photo Birdhouse 3'] !== null ? '<img src="images/Damaged Birdhouse Photos copy/House Pic 3 right.png"' + String(feature.properties['Photo Birdhouse 3']).replace(/[\\\/:]/g, '_').trim() + '">' : '') + '</td>\
                     </tr>\
                     <tr>\
-                        <td colspan="2">' + (feature.properties['Photo Birdhouse 4'] !== null ? '<img src="images/' + String(feature.properties['Photo Birdhouse 4']).replace(/[\\\/:]/g, '_').trim() + '">' : '') + '</td>\
+                        <td colspan="2">' + (feature.properties['Photo Birdhouse 4'] !== null ? '<img src="images/Damaged Birdhouse Photos copy/House 4 pxl right.jpg"' + String(feature.properties['Photo Birdhouse 4']).replace(/[\\\/:]/g, '_').trim() + '">' : '') + '</td>\
                     </tr>\
                 </table>';
             layer.bindPopup(popupContent, {maxHeight: 400});
