--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
             });
             var popupContent = '<table>\
                     <tr>\
-                        <td colspan="2">' + (feature.properties['Photo 2'] !== null ? '<img src="images/' + String(feature.properties['Photo 2']).replace(/[\\\/:]/g, '_').trim() + '">' : '') + '</td>\
+                        <td colspan="2">' + (feature.properties['Photo 2'] !== null ? '<img src="images/Diversity Tables copy/Hillside Fall 2.png"' + String(feature.properties['Photo 2']).replace(/[\\\/:]/g, '_').trim() + '">' : '') + '</td>\
                     </tr>\
                 </table>';
             layer.bindPopup(popupContent, {maxHeight: 400});
