--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             padding: 0;
             margin: 0;
         .leaftlet-popup-content {
-            width: fit-content;
+            width: auto !important;
             height: fit-content;
         }
         </style>
