--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         .leaftlet-popup-content {
             width: auto !important;
             height: fit-content;
+            height: overflow-y scroll;
         }
         </style>
         <title>Avian Biodiversity on Seton Hill Campus</title>
