--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
             height: 100%;
             padding: 0;
             margin: 0;
+        .leaflet-popup-content {
+            width: fit-content !important;
+        }
         </style>
         <title>Avian Biodiversity on Seton Hill Campus</title>
     </head>
