--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             padding: 0;
             margin: 0;
         .leaflet-popup-content {
+            width: auto !important; 
             width: fit-content !important;
         }
         </style>
