--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         .leaflet-popup-content {
             width: auto !important; 
             width: fit-content !important;
+            height: auto !important;
+            overflow-y: scroll; 
         }
         </style>
         <title>Avian Biodiversity on Seton Hill Campus</title>
