--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             margin: 0;
         .leaflet-popup-content {
             width: fit-content !important;
-            height: 300px;
+            height: 450px !important;
             overflow-y: scroll; 
         }
         </style>
