--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             margin: 0;
         .leaflet-popup-content {
             width: fit-content !important;
+            height: fit-content; 
             height: 450px !important;
             overflow-y: scroll; 
         }
