--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         .leaflet-popup-content {
             width: fit-content !important;
             height: fit-content; 
-            height: 450px !important;
+            height: 450px;
             overflow-y: scroll; 
         }
         </style>
