--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
             margin: 0;
         .leaflet-popup-content {
             width: fit-content !important;
-            height: auto !important; 
-            overflow-y: scroll; 
+            overflow-y: scroll !important; 
         }
         </style>
         <title>Avian Biodiversity on Seton Hill Campus</title>
