--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
             margin: 0;
         .leaflet-popup-content {
             width: fit-content !important;
+            height: 400px;
+            height: auto !important;
             overflow-y: scroll !important; 
         }
         </style>
