--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         .leaflet-popup-content {
             width: fit-content !important;
             width: auto !important;
+            maxHeight: auto !important;
             overflow-y: scroll !important; 
         }
         </style>
