--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         .leaflet-popup-content {
             width: fit-content !important;
             width: auto !important;
-            overflow-y: scroll !important; 
+            overflow-y: auto !important; 
         }
         </style>
         <title>Avian Biodiversity on Seton Hill Campus</title>
